updated to add AsperaLabs pipe and Qcoh speakslike

--- a/resume.tex
+++ b/resume.tex
@@ -34,34 +34,51 @@ Employer Email: bbischof@asperasoft.com
 \end{multicols}
 
 \vspace{-10pt}\section*{Statement of Purpose}
-\noindent \textit{\textbf{I am a mathematician-turned-data engineer with a penchant for applying elegant thinking to difficult quantitative problems in the technology space. I am notorious for asking the right questions. I also have a deep love for information presentation and communication. }}
+\noindent \textit{\textbf{I am a mathematician-turned-data engineer with a penchant for applying rigorous quantitative thinking to difficult problems in the technology space. I am notorious for asking the right questions. I have a deep love for information presentation and communication. }}
 
 
 \vspace{-10pt}\section*{Education}
 \begin{itemize}
-	\vspace{-5pt}\item	2015-Jan 2016: Galvanize Data Engineering Immersive 
-	\vspace{-5pt}\item	2015: Galvanize D3 Workshop
-	\vspace{-5pt}\item	2008-May 2014: Ph.D. in Mathematics, Kansas State University\\ \textit{Surowski Memorial Fellowship Research Excellence Award, University Academic Excellence Award.}
+	\vspace{-5pt}\item	Oct 2015-Jan 2016: Galvanize Data Engineering Immersive 
+	\vspace{-5pt}\item	May 2015: Galvanize D3 Workshop
+	\vspace{-5pt}\item	Sept 2008-May 2014: Ph.D. in Mathematics, Kansas State University
+		\begin{itemize}
+		 \vspace{-5pt}\item \textit{University Academic Excellence Award.}
+		 \vspace{-5pt}\item \textit{Surowski Memorial Fellowship Research Excellence Award.}
+		 \end{itemize}
 	%\vspace{-5pt}\item	2008-2011: Masters Degree in Mathematics, Kansas State University
-	\vspace{-5pt}\item	2004-2008: Bachelors Degree in Mathematics, Westminster College.
+	\vspace{-5pt}\item	Sept 2004-May 2008: Bachelors Degree in Mathematics, Westminster College.
 \end{itemize}
 
 \vspace{-10pt}\section*{Professional Experience}
 \subsection*{Data Engineering}
 \subsubsection*{Galvanize Data Engineering Immersive October 2015-January 2016}
 	\begin{itemize}
-		\vspace{-5pt} \item Project driven course on the most popular and essential big data technologies. Solo and pair programming labs daily implementing, problem solving, and testing lessons learned that day.
-		\vspace{-5pt} \item Data Engineering Capstone: ongoing
-		\vspace{-5pt}\item 	\textbf{Used Spark, Scala, MapReduce, Hive, Pig, Sqoop, Flume, Scalding, HDFS, Hadoop, Python, REST API, JSON, Java, JUnit, and more}
+		\vspace{-5pt} \item Project driven course covering several of the most popular and essential big data technologies, architectures, and algoritms. Solo and pair programming labs daily--implementing, problem solving, and testing.
+		\vspace{-5pt} \item \textbf{Data Engineering Capstone}: Spark Streaming log file parser.
+		\vspace{-5pt}\item 	\textbf{Used Spark, Scala, Kafka, MapReduce, Hive, Pig, Sqoop, Flume, Scalding, HDFS, Hadoop, Python, REST API, JSON, Java, JUnit, and more}
 	\end{itemize}
 	\subsubsection*{IBM(Aspera Labs) February 2014-Present: Software Engineer, Research and Development}
 	\begin{itemize}
-	\vspace{-5pt}\item 	Designed a Spark Streaming Data Pipeline \begin{itemize}
-					\item 	Utilizing Spark, Spark Streaming, ScaleKV(Redis), and ASCP I designed an injest pipeline for processing high value log files in real time.
-					\item 	Designed and implemented a Lambda architecture to fit with the Spark Streaming layer and allow for permanent storage solutions simultaneously.
+	\vspace{-5pt}\item 	Designed a Spark Streaming Data Pipeline \textit{(Ongoing)} \begin{itemize}
+					\item 	Designed, implmented, and integrated a novel downsampling algorithm for high-volume disjoint non-uniform time-series data. \textit{Paper forthcoming}
+					\item 	Utilizing Spark, Spark Streaming, ScaleKV(Redis), and ASCP I designed an injest pipeline for processing high value log files in real time, and serving a front end D3 visualization platform.
+					\item 	Designed and implemented a Lambda architecture integrating Kafka, Spark Streaming, Redis, and Elastic Search for ETL, processing, short-term and long-term data storage.
 					\end{itemize}
 	\end{itemize}
 \subsection*{Data Science and Software Engineering}
+\subsubsection*{Quasicoherent Labs January 2016-Present: Founder, Data Scientist}
+	\begin{itemize}
+	\vspace{-5pt}\item 	\textit{SpeaksLike}: Stump speech text comparison and analysis \begin{itemize}
+					\item 	Built a webscraper to collect public data on presidential candidate stump speeches; cleaned and preproccessed the data for NLP.
+					\item 	Implemented $K$-means clustering, PCR, and Gap statistic calculations for text corpuses.
+					\item 	Wrote and implemented a novel cluster metric for 	cluster comparison.
+					\item 	Wrote and implemented a novel distribution(and corresponding kernel method) for text corpuses, integrated with $K$-means.
+					\item 	Wrote and implemented a sentiment based, and intensity based weight vector for text clustering. 
+					\item 	Used the above methods to compare similarity(and similarity significance) of 2015 stump speeches. \textit{Paper forthcoming}
+					\end{itemize}
+	\end{itemize}
+
 \subsubsection*{IBM(Aspera Labs) February 2014-Present: Software Engineer, Research and Development}
 	\begin{itemize}
 	\vspace{-5pt}\item 	Data Visualization Dashboard and Log File Processing \begin{itemize}
@@ -76,10 +93,10 @@ Employer Email: bbischof@asperasoft.com
 					\item 	Designed an experiment to test efficiency of a new livestream video technology quatitatively. 
 					\item 	Utilized a modification of TCPDump to observe packets in large scale transfers and gather \textit{perfect} resolution data at the packet level. 
 					\item 	Designed and ran a large test rubrik and data pipeline in BASH and Python to manage the transfers, collect the data, parse the data, analyze the data, and output the data to a D3 visualization. 
-					\item 	Wrote a white-paper from my results; presented paper and analysis at NAB in Las Vegas to thousands of customers; shortlisted for the Game-Changer award due to my work proving the efficiency of the new technology and its applicability to the use-cases; answered technical questions and usage questions from people all across the media-tech space, including a panel of judges. 							\item 	Worked primarily alone, with assistance from others on certain technologies.
+					\item 	Wrote a white-paper; presented paper and analysis at NAB in Las Vegas to thousands of customers; shortlisted for the Game-Changer award for analysis proving the efficiency of the new technology and its applicability to the use-cases; answered technical questions and usage questions from people all across the media-tech space, including a panel of judges. 		
 					\end{itemize}
-	\vspace{-5pt}\item 	Brainstormed and prototyped a number of data products for integration with Aspera's core software. This ranges from researching ML algorithms in specialized fields, to extensive mathematical modeling of signals. \textit{Many details of this work I am not permitted to disclose.}
-	\vspace{-5pt}\item 	(Ongoing) Satellite network analysis \begin{itemize}
+	\vspace{-5pt}\item 	Brainstormed and prototyped a number of data products for integration with Aspera's core software. This ranges from researching ML algorithms in specialized fields, to extensive mathematical modeling of signals. 
+	\vspace{-5pt}\item 	Satellite network analysis \begin{itemize}
 					\item 	Designed an experiment to test network qualities of a particular satellite network. 
 					\item 	Configured the network, built the test framework, built the data pipeline for processing, generated data visualization and analysis. Used data analysis to redesign the transfer for networks of this type. 
 					\item 	Expanded test cases to include WAN networks. Retested, and expanded model to include WAN use-cases. 
@@ -124,12 +141,12 @@ Employer Email: bbischof@asperasoft.com
 	 \vspace{-5pt}\item 	\textbf{Used advanced algebraic/combinatorial techniques, JAVA, Batch, Mathematica, Javascript.}
 	\end{itemize}
 	
-\vspace{-10pt}\section*{Technical Skills}
+%\vspace{-10pt}\section*{Technical Skills}
 
-	\begin{itemize}
-		\item \textbf{Languages} - I have worked in Javascript, Python, Bash, Awk, Sed, HTML, and Mathematica. I have had courses in R, Matlab, and Gap. I completed about 75\% of an undergrad CS curriculum in JAVA. 
-		\item \textbf{Platforms and Techniques} -  Text Mining, Sentiment Analysis, Restful APIs, Scripting, Algorithm Design, Technical Writing, Vector Graphics, MapReduce, Experimental Design and Statistics.
-	\end{itemize}
+%	\begin{itemize}
+%		\item \textbf{Languages} - I have worked in Javascript, Python, Bash, Awk, Sed, HTML, and Mathematica. I have had courses in R, Matlab, and Gap. I completed about 75\% of an undergrad CS curriculum in JAVA. 
+%		\item \textbf{Platforms and Techniques} -  Text Mining, Sentiment Analysis, Restful APIs, Scripting, Algorithm Design, Technical Writing, Vector Graphics, MapReduce, Experimental Design and Statistics.
+%	\end{itemize}
 
 \subsection*{Education, Service, and Leadership}
 \subsubsection*{CommonCore Curriculum writer}
