--- a/resume.tex
+++ b/resume.tex
@@ -39,6 +39,7 @@ Employer Email: bbischof@asperasoft.com
 
 \vspace{-10pt}\section*{Education}
 \begin{itemize}
+	\vspace{-5pt}\item 	Jun-Jul 2016: Stamen Design Building Interactive Maps with D3 Workshop
 	\vspace{-5pt}\item	Oct 2015-Jan 2016: Galvanize Data Engineering Immersive 
 	\vspace{-5pt}\item	May 2015: Galvanize D3 Workshop
 	\vspace{-5pt}\item	Sept 2008-May 2014: Ph.D. in Mathematics, Kansas State University
