--- a/resume_brief/resume_brief.tex
+++ b/resume_brief/resume_brief.tex
@@ -55,13 +55,13 @@ Homepage: \url{http://www.bbischof.com}
 
 \subsubsection*{Blue Bottle Coffee (August 2016-Present): \textit{Senior Software Engineer}, Data Engineering and Machine Learning}
   \begin{itemize}
+    \vspace{-5pt}\item  \textit{Team Leadership} led two engineers in refactoring, and feature development; mentored and coached junior engineers to produce production code and on SE process best practices
     \vspace{-5pt}\item  \textit{Demand Forecasting Engine} Daily predictions for 1000's of sku's $>50$ locations
     \vspace{-5pt}\item  \textit{Production Model and Prediction Deployments} Designed AWS architecture and deployment
     \vspace{-5pt}\item  \textit{Forecasting Pipeline and API} Job queue and messeging based pipeline
     \vspace{-5pt}\item  \textit{Data Warehouse Development} implemented micro-service DB's; designed DB views
     \vspace{-5pt}\item  \textit{BI Dashboarding, Performance Analysis} developed performance metrics, and build user dashboards
     \vspace{-5pt}\item  \textit{Project Planning and Development} greenfield project development, prototyped, and productize V1
-    \vspace{-5pt}\item  \textit{Team Leadership} led two engineers in refactoring, and feature development
     \vspace{-5pt}\item  \textit{Deployment and DevOps} assisted in cloud infrastructure and devops for AWS ECS cluster
     \vspace{-5pt}\item  \textit{Testing and Containerization} Dockerized ML pipeline, integrated testing framework/jenkins (unit and integration)
     \vspace{-5pt}\item  \textit{Recommendation Engine} build a user-facing recommendation engine for coffee flavors
